--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "serve": "node src/index.js",
     "prestart": "rimraf build && babel src --out-dir build",
     "start": "node build/index.js",
-    "test": " cross-env NODE_ENV=test mocha --exit --recursive --require @babel/register --timeout=5000 tests/**/*.js",
+    "test": " cross-env NODE_ENV=test mocha --exit --recursive --require @babel/register --timeout=15000 tests/**/*.js",
     "test:coverage": "cross-env NODE_ENV=test nyc --require @babel/register --reporter lcov --reporter text mocha --exit --recursive --timeout=5000 tests/**/*.js",
     "lint": "eslint . --ext .js",
     "lint-fix": "eslint . --ext .js --fix"
@@ -52,6 +52,7 @@
     "nyc": "^15.1.0",
     "prettier": "^2.1.1",
     "rimraf": "^3.0.2",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "swagger-ui-express": "^4.3.0"
   }
 }
