--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^5.10.2",
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.2",
+    "redis": "^4.0.2",
     "swagger-jsdoc": "^6.1.0",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.0"
