--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "@sendgrid/mail": "^7.2.5",
+    "amqplib": "^0.8.0",
     "bcrypt": "^5.0.1",
     "chai": "^4.3.4",
     "cors": "^2.8.5",
